--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@ ul {
     list-style-type: none;
 }
 
+h1 {
+    margin: 0;
+}
+
 .clearfix:after {
     content: "";
     display: table;
@@ -23,6 +27,8 @@ ul {
     width: 100%;
     height: 56px;
     background: rgba(0, 0, 0, 0.75);
+    position: fixed;
+    z-index: 1;
 }
 
 .container {
@@ -43,10 +49,66 @@ ul {
     display: none;
 }
 
+
+/*banner版面*/
+
+.banner {
+    width: 100%;
+    height: 420px;
+    background-size: cover;
+    background-image: url(../image/header_mobile.png);
+    background-position: center bottom;
+}
+
+.banner>.container {
+    padding: 113px 10px 113px 10px;
+}
+
+.sloganbg {
+    width: 300px;
+    margin: 0 auto;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.35);
+    color: #FFFFFFFF;
+}
+
+.slogan-title {
+    font-size: 36px;
+    padding-top: 20px;
+}
+
+.slogan-subtitle {
+    display: inline-block;
+    margin: 16px 54px 20px 54px;
+    font-size: 8px;
+    text-align: center;
+}
+
+.slogan-subtitle>p {
+    font-size: 2em;
+}
+
+.slogan-subtitle>p:first-child {
+    margin: 0;
+}
+
+.slogan-subtitle>p:nth-child(3) {
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+}
+
 @media(min-width:767px) {
     .container {
-        min-width: 767px;
+        max-width: 767px;
         padding: 17px 13px 15px 13px;
+    }
+    .banner {
+        background-image: url(../image/header_desktop.png);
+    }
+    .banner>.container {
+        min-width: 767px;
+        padding: 123px 154px 145px 154px;
     }
     br {
         display: none;
@@ -65,11 +127,30 @@ ul {
         text-decoration: none;
         color: #fff;
     }
+    .sloganbg {
+        width: 460px;
+    }
+    .slogan-title {
+        display: inline-block;
+    }
+    .slogan-subtitle {
+        padding-top: 16px;
+        padding-bottom: 26px;
+        margin: 0;
+        font-size: 8px;
+    }
 }
 
 @media(min-width:1024px) {
     .container {
         min-width: 1024px;
         padding: 16px 48px 16px 42px;
+    }
+    .banner>.container {
+        min-width: 1024px;
+        padding-top: 123px;
+        padding-bottom: 145px;
+        padding-left: 282px;
+        padding-right: 282px;
     }
 }
