--- a/css/main.css
+++ b/css/main.css
@@ -337,6 +337,124 @@ input[type="submit"] {
     background: #F56C23;
 }
 
+
+/*footer區塊*/
+
+.intro-restaurant {
+    width: 235px;
+    float: left;
+    margin-right: 20px;
+}
+
+.intro-restaurant>p {
+    width: 235px;
+}
+
+.countus {
+    width: 235px;
+    float: left;
+}
+
+.countus>ul {
+    width: 235px;
+}
+
+
+/* .name1 {
+    margin-top: 0;
+    width: 245px;
+    float: right;
+} */
+
+footer {
+    background-color: #EFE9E7;
+}
+
+.footer>.container {
+    padding: 50px 11px 50px 10px;
+}
+
+.intro-restaurant {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.intro-restaurant>.about {
+    text-align: left;
+    font-size: 24px;
+    color: #3D1101;
+}
+
+.intro-restaurant>p {
+    width: 100%;
+    height: 84px;
+    font-size: 16px;
+    text-align: left;
+    color: #3D1101;
+    margin-top: 16px;
+}
+
+.countus {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.countus>.title {
+    font-size: 24px;
+    color: #3D1101;
+    text-align: left;
+    margin-bottom: 16px;
+}
+
+.countus>ul {
+    width: 100%;
+    padding-left: 0;
+    font-size: 16px;
+    color: #3D1101;
+    padding-left: 20px;
+    list-style-type: disc;
+    line-height: 1.4;
+}
+
+.name1 {
+    width: 100%;
+    font-size: 49px;
+    margin-top: 30px;
+    margin-bottom: 22px;
+    float: right;
+}
+
+.name1>img {
+    width: 245px;
+    height: 49px;
+    float: right;
+}
+
+.social-media {
+    float: right;
+}
+
+.social-media li {
+    float: left;
+    margin-left: 12px;
+}
+
+.social-media li i {
+    font-size: 36px;
+}
+
+.fab.fa-google-plus-square {
+    color: #DB4437;
+}
+
+.fab.fa-twitter-square {
+    color: #41ABE1;
+}
+
+.fab.fa-facebook-square {
+    color: #3A5795;
+}
+
 @media(min-width:767px) {
     .container {
         max-width: 767px;
@@ -432,6 +550,30 @@ input[type="submit"] {
         float: left;
         text-align: left;
     }
+    .intro-restaurant {
+        width: 235px;
+        float: left;
+        margin-right: 20px;
+    }
+    .intro-restaurant>p {
+        width: 235px;
+    }
+    .countus {
+        width: 235px;
+        float: left;
+    }
+    .countus>ul {
+        width: 235px;
+        text-align: left;
+    }
+    .name1 {
+        margin-top: 0;
+        width: 245px;
+        float: right;
+    }
+    .social-media {
+        float: right;
+    }
     /* .t {
         width: 60%;
         margin: 0 auto;
@@ -484,5 +626,12 @@ input[type="submit"] {
         background-repeat: no-repeat;
         background-position: center;
         margin: 0 auto;
+    }
+    .footer>.container {
+        padding: 100px 42px 50px 43px;
+    }
+    .name1 {
+        float: left;
+        width: 47%;
     }
 }
