--- a/css/main.css
+++ b/css/main.css
@@ -455,6 +455,53 @@ footer {
     color: #3A5795;
 }
 
+
+/*order頁面*/
+
+.order-title {
+    font-size: 20px;
+    color: #3D1101;
+    line-height: 32px;
+}
+
+.category {
+    padding: 0;
+}
+
+.category li {
+    width: 298px;
+    margin: 0 auto;
+    border-bottom: 1px solid #3d1101;
+}
+
+.category li:nth-last-child(1) {
+    background: #3D1101;
+}
+
+.category a {
+    font-size: 16px;
+    color: #3D1101;
+    line-height: 32px;
+    text-decoration: none;
+    display: block;
+}
+
+.content>input {
+    width: 268px;
+    margin: 0 auto;
+    border: 2px solid #3D1101;
+    margin-top: 24px;
+}
+
+.content>span {
+    display: block;
+}
+
+
+/* .category a:nth-last-child(1) {
+    color: #FFFFFF;
+} */
+
 @media(min-width:767px) {
     .container {
         max-width: 767px;
