--- a/css/main.css
+++ b/css/main.css
@@ -546,6 +546,8 @@
         }
         
         .meal {
+            width: 300px;
+            margin: 0 auto;
             background: #EFE9E7;
             box-shadow: 3px 3px 4px 0px rgba(0, 0, 0, 0.16);
             margin-top: 34px;
@@ -553,10 +555,20 @@
         
         .meal-img {
             width: 100%;
+            /* display: block;*/
             position: relative;
         }
         
         .line {
+            position: absolute;
+            top: 14%;
+            left: 19%;
+            border-bottom: 20px solid red;
+            border-left: 50px solid transparent;
+            border-right: 50px solid transparent;
+            height: 0;
+            width: 30px;
+            transform: rotate(-315deg);
             /* top: 22px;
     right: -25px;
     width: 65px;
@@ -567,16 +579,16 @@
     border-left: 25px solid transparent;
     border-right: 25px solid transparent;
     transform: rotate(45deg); */
-            position: absolute;
+            /* position: absolute;
             border-color: transparent transparent #00e6c0 transparent;
             border-style: solid solid solid solid;
-            border-width: 30px;
+            border-width: 30px; */
             /* transform: rotate(45deg); */
-            width: 90px;
+            /* width: 90px;
             height: 90px;
             top: 141%;
             left: 85%;
-            transform: rotate(-315deg);
+            transform: rotate(-315deg); */
             /* background: #00CC99; */
         }
         
@@ -610,7 +622,7 @@
         }
         
         .meal-list {
-            width: 280px;
+            width: 100%;
             margin: 0 auto;
             padding-bottom: 10px;
         }
@@ -789,6 +801,23 @@
         margin: 0 auto; 
         z-index: 0;
     } */
+            .meal {
+                float: left;
+                width: 50%;
+                margin: 0 auto;
+            }
+            .meal-img {
+                width: 80%;
+            }
+        }
+        
+        @media(min-width:500px) and (max-width:766px) {
+            .meal {
+                width: 500px;
+            }
+            .meal-img {
+                max-width: 100%;
+            }
         }
         
         @media(min-width:1024px) {
