--- a/css/main.css
+++ b/css/main.css
@@ -554,7 +554,7 @@
         }
         
         .meal-img {
-            width: 100%;
+            /* width: 100%; */
             /* display: block;*/
             position: relative;
         }
@@ -803,8 +803,8 @@
     } */
             .meal {
                 float: left;
-                width: 50.3333%;
-                /* margin: 0 auto; */
+                min-width: 50%;
+                margin: 0 auto;
             }
             .meal-img {
                 /* width: 80%; */
