--- a/css/main.css
+++ b/css/main.css
@@ -562,7 +562,7 @@
         }
         
         .meal-img {
-            /* width: 100%; */
+            width: 100%;
             /* display: block;*/
             position: relative;
         }
@@ -652,8 +652,10 @@
             font-size: 20px;
             font-family: 'Roboto-Light';
             text-align: center;
-            margin-top: 20px;
-            margin-bottom: 13px;
+            margin-top: 3%;
+            margin-bottom: 1%;
+            /* margin-top: 20px;
+            margin-bottom: 13px; */
         }
         
         .buy {
@@ -813,7 +815,12 @@
     } */
             .meal {
                 float: left;
-                margin-right: 20px;
+                width: 48%;
+                min-height: 287px;
+                margin-left: 1%;
+                margin-right: 1%;
+                margin-top: 1%;
+                /* margin-right: 20px; */
                 /* margin-top: 0; */
                 /* min-width: 50%; */
                 /* margin: 0 auto; */
@@ -821,6 +828,10 @@
             .meal-img {
                 max-width: none;
                 /* width: 80%; */
+            }
+            .meal-list {
+                padding: 0 1% 1% 1%;
+                min-height: 150px;
             }
             .searcharea>.meal:nth-child(2) {
                 margin-top: 0;
@@ -893,10 +904,21 @@
             .searcharea {
                 width: 73%;
                 float: right;
+                margin-top: 0;
             }
             .meal {
-                margin-top: 20px;
-                margin-right: 12px;
+                width: 31.333%;
+                margin-top: 26px;
+                margin-left: 1%;
+                min-height: 230px;
+                /* margin-top: 20px;
+                margin-right: 12px; */
+            }
+            .meal-list {
+                min-height: 140px;
+            }
+            .meal-title-en {
+                font-size: 12px;
             }
             .out-area {
                 width: 70%;
