--- a/css/main.css
+++ b/css/main.css
@@ -413,8 +413,8 @@
         }
         
         .name1>img {
-            width: 245px;
-            height: 49px;
+            /* width: 245px;
+            height: 49px; */
             float: right;
         }
         
@@ -729,15 +729,17 @@
                 padding: 0 30px;
             }
             .intro {
-                width: 33.333%;
+                width: 31.333%;
                 float: left;
+                margin-right: 1%;
+                margin-left: 1%;
             }
-            .content>.intro:nth-last-child(3) {
+            /* .content>.intro:nth-last-child(3) {
                 padding-right: 60px;
             }
             .content>.intro:nth-last-child(2) {
                 padding-right: 60px;
-            }
+            } */
             .chief-feature {
                 padding-left: 2%;
                 background: #3D1101;
@@ -758,9 +760,10 @@
                 padding-top: 50px;
             }
             .recommend-colum {
-                width: 33.3333%;
+                width: 31.3333%;
+                margin-right: 1%;
+                margin-left: 1%;
                 float: left;
-                padding-right: 20px;
             }
             .map {
                 width: 50%;
@@ -891,10 +894,10 @@
                 margin: 0 auto;
             }
             .footer>.container {
-                padding: 100px 42px 50px 43px;
+                padding: 100px 10px 50px 43px;
             }
             .name1 {
-                float: left;
+                /* float: left; */
                 width: 47%;
             }
             .meal-category {
