--- a/css/main.css
+++ b/css/main.css
@@ -495,6 +495,11 @@ input[type="submit"] {
     padding: 52px 10px 0 10px;
 }
 
+.meal-category>.order-title>i {
+    margin-right: 15px;
+    ;
+}
+
 .out-area>input {
     width: calc(100% - 32px);
     margin: 0 auto;
@@ -649,56 +654,6 @@ input[type="submit"] {
     margin-bottom: 50px;
 }
 
-.line {
-    width: 90px;
-    height: 90px;
-    position: absolute;
-    overflow: hidden;
-    top: -50px;
-    left: 50px;
-    /*     position: absolute;
-    border-bottom: 25px solid #00e6c0;
-    border-left: 25px solid transparent;
-    border-right: 25px solid transparent;
-    height: 0;
-    top: 5%;
-    left: 71%;
-    width: 122px;
-    transform: rotate(-315deg); */
-    /*       position: absolute;
-    border-bottom: 25px solid #00e6c0;
-    border-left: 25px solid transparent;
-    border-right: 25px solid transparent;
-    height: 0;
-    top: 5%;
-    left: 71%;
-    width: 122px;
-    transform: rotate(-315deg); */
-}
-
-.top {
-    /*     z-index: -1;
-    position: absolute;
-    border-color: transparent transparent #00FF00 transparent;
-    border-style: solid solid solid solid;
-    border-width: 86px;
-    width: 46px;
-    height: 49px;
-    top: -36%;
-    left: 45%; */
-    /*       z-index: -1;
-    position: absolute;
-    border-color: transparent transparent transparent transparent;
-    border-style: solid solid solid solid; */
-    /* border-width: 86px; */
-    /*     width: 122px;
-    height: 50px;
-    top: 10%;
-    background: #00ff00;
-    left: 62%;
-    transform: rotate(-315deg); */
-}
-
 .ribbon {
     position: absolute;
     right: -5px;
@@ -752,6 +707,127 @@ input[type="submit"] {
     border-right: 3px solid #00e6c0;
     border-bottom: 3px solid transparent;
     border-top: 3px solid #00e6c0;
+}
+
+
+/*logoin頁面*/
+
+.logintitle {
+    font-family: 'NotoSansCJKtc-Black';
+    font-size: 48px;
+    color: #3D1101;
+    text-align: center;
+}
+
+.login-subtitle {
+    font-family: 'NotoSansCJKtc-Medium';
+    font-size: 20px;
+    color: #3D1101;
+    text-align: center;
+    margin-bottom: 35px;
+}
+
+.loginform {
+    background: #EFE9E7;
+    box-shadow: 3px 3px 4px 0px rgba(0, 0, 0, 0.16);
+    text-align: center;
+    border-top: 3px solid #FF5E45;
+}
+
+.loginform>.container {
+    min-width: 290px;
+    width: 80%;
+    padding: 10px;
+}
+
+.loginform>.container a {
+    text-decoration: none;
+    font-size: 14px;
+    color: #FF5E45;
+    /* float: left; */
+    display: block;
+    width: 100%;
+    text-align: left;
+    margin-bottom: 30px;
+    margin-top: 14px;
+}
+
+.loginform>.container>input {
+    margin-bottom: 0;
+    padding: 10px 9px;
+}
+
+.login {
+    font-family: 'NotoSansCJKtc-Black';
+    font-size: 18px;
+    color: #3D1101;
+    margin-bottom: 16px;
+}
+
+.loginform>.container>.btn-area {
+    width: 100%;
+    float: none;
+    text-align: center;
+}
+
+.loginform>.container input:nth-child(3) {
+    margin-bottom: 15px;
+}
+
+.loginform>.container>label {
+    width: 100%;
+    text-align: left;
+    margin-bottom: 0;
+}
+
+#regest-btn {
+    float: left;
+    width: 125px;
+    background: rgba(0, 0, 0, 0.35);
+    border-radius: 3px;
+    /* margin-right: 30px; */
+}
+
+#login-btn {
+    float: right;
+    width: 125px;
+    background: #F56C23;
+    border-radius: 3px;
+}
+
+.user,
+.passwd {
+    position: relative;
+    /*   display:inline-block; */
+}
+
+.user:before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f0e0";
+    font-size: 14px;
+    position: absolute;
+    left: 3%;
+    top: 74%;
+    transform: translateY(-50%);
+}
+
+.user input,
+.passwd input {
+    text-indent: 30px;
+    margin-bottom: 0;
+    /* padding: 5px; */
+}
+
+.passwd:before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f023";
+    font-size: 14px;
+    position: absolute;
+    left: 3%;
+    top: 74%;
+    transform: translateY(-50%);
 }
 
 
@@ -917,128 +993,56 @@ input[type="submit"] {
     .searcharea>.meal:nth-child(2) {
         margin-top: 0;
     }
-    .line {
-        position: absolute;
-        border-bottom: 25px solid #00e6c0;
-        border-left: 25px solid transparent;
-        border-right: 25px solid transparent;
-        height: 0;
-        top: 5%;
-        left: 75%;
-        width: 38%;
-        transform: rotate(-315deg);
+    .loginform>.container {
+        width: 50%;
     }
-    .top {
-        z-index: -1;
-        position: absolute;
-        border-color: transparent transparent transparent transparent;
-        border-style: solid solid solid solid;
-        /* border-width: 86px; */
-        width: 37%;
-        height: 22%;
-        top: 9%;
-        background: #00ff00;
-        left: 66%;
-        transform: rotate(-315deg);
+    .loginform {
+        width: 50%;
+        margin: 0 auto;
+    }
+    @media(min-width:400px) and (max-width:584px) {
+        .meal {
+            min-width: 350px;
+        }
+        .meal-img {
+            width: 100%;
+        }
+        .outer hr {
+            display: none;
+        }
+        /* .loginform>.container {
+            width: 80%;
+        } */
     }
 }
 
-@media(min-width:400px) and (max-width:584px) {
-    .meal {
-        min-width: 350px;
-    }
-    .meal-img {
-        width: 100%;
-    }
-    .outer hr {
-        display: none;
-    }
-    .line {
-        position: absolute;
-        border-bottom: 25px solid #00e6c0;
-        border-left: 25px solid transparent;
-        border-right: 25px solid transparent;
-        height: 0;
-        top: 5%;
-        left: 74%;
-        width: 37%;
-        transform: rotate(-315deg);
-    }
-    .top {
-        /*         z-index: -1;
-        position: absolute;
-        border-color: transparent transparent #00FF00 transparent;
-        border-style: solid solid solid solid;
-        border-width: 86px;
-        width: 46px;
-        height: 49px;
-        top: -33%;
-        left: 53%; */
-        z-index: -1;
-        position: absolute;
-        border-color: transparent transparent transparent transparent;
-        border-style: solid solid solid solid;
-        /* border-width: 86px; */
-        width: 37%;
-        height: 22%;
-        top: 9%;
-        background: #00ff00;
-        left: 65%;
-        transform: rotate(-315deg);
-    }
-}
-
-
-}
 @media(min-width:585px) and (max-width:766px) {
     .meal {
         min-width: 400px;
     }
-    
     .meal-img {
         min-width: 100%;
     }
-    
     .outer hr {
         display: none;
     }
-    
-    .line {
-        z-index: -1;
-        position: absolute;
-        border-color: transparent transparent transparent transparent;
-        border-style: solid solid solid solid;
-        /* border-width: 86px; */
-        width: 37%;
-        height: 22%;
-        top: 9%;
-        background: #00ff00;
-        left: 65%;
-        transform: rotate(-315deg);
+    .loginform {
+        width: 50%;
+        margin: 0 auto;
     }
-    
-    .top {
-        position: absolute;
-        border-bottom: 25px solid #00e6c0;
-        border-left: 25px solid transparent;
-        border-right: 25px solid transparent;
-        height: 0;
-        top: 5%;
-        left: 74%;
-        width: 37%;
-        transform: rotate(-315deg);
+    .loginform>.container {
+        width: 50%;
     }
 }
+
 @media(min-width:1024px) {
     .header {
         z-index: 3;
     }
-    
     .container {
         min-width: 1024px;
         padding: 16px 48px 16px 42px;
     }
-    
     .banner>.container {
         min-width: 1024px;
         padding-top: 123px;
@@ -1046,54 +1050,44 @@ input[type="submit"] {
         padding-left: 282px;
         padding-right: 282px;
     }
-    
     .chief-feature {
         padding-left: 4%;
         background: #3D1101;
     }
-    
     .chief-feature-img {
         float: left;
         width: 48%;
     }
-    
     .name {
         float: left;
         width: 50%;
         height: 460px;
     }
-    
     .name>.container {
         min-width: 35%;
     }
-    
     .map {
         width: 50%;
         background-repeat: no-repeat;
         background-position: center;
         margin: 0 auto;
     }
-    
     .footer>.container {
         padding: 100px 10px 50px 43px;
     }
-    
     .name1 {
         /* float: left; */
         width: 47%;
     }
-    
     .meal-category {
         float: left;
         width: 25%;
     }
-    
     .searcharea {
         width: 73%;
         float: right;
         margin-top: 0;
     }
-    
     .meal {
         width: 31.333%;
         margin-top: 26px;
@@ -1103,23 +1097,26 @@ input[type="submit"] {
         /* margin-top: 20px;
                 margin-right: 12px; */
     }
-    
     .meal-list {
         min-height: 140px;
     }
-    
     .meal-title-en {
         font-size: 12px;
     }
-    
     .out-area {
         width: 70%;
         float: left;
     }
-    
     .buy-area {
         width: 30%;
         float: left;
         margin-top: 0;
+    }
+    .loginform {
+        width: 30%;
+        margin: 0 auto;
+    }
+    .loginform>.container {
+        width: 30%;
     }
 }
