--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,8 @@ p {
     width: 100%;
     height: 56px;
     background: rgba(0, 0, 0, 0.75);
-    position: fixed;
+    /* position: fixed; */
+    position: relative;
     z-index: 3;
 }
 
@@ -51,6 +52,53 @@ p {
 #nav .menu {
     display: none;
 }
+
+
+/* .show-menu1 {
+    display: block;
+}
+
+.show-menu1:hover {
+    display: none;
+    color: green;
+} */
+
+
+/* .menu1 {
+    display: none;
+    position: absolute;
+    left: -12px;
+    top: 61px;
+    min-height: 200px;
+    overflow: hidden;
+    transition: max-height 2.3s;
+}
+
+.menu1 li {
+    float: none;
+    width: 200px;
+    text-align: center;
+} */
+
+
+/* 
+.menu1 li a {
+    display: block;
+}
+
+.hamburger-menu {
+    background: none;
+    border: none;
+    display: inline-block;
+}
+
+.hamburger-menu .icon-bar {
+    background-color: #ff4c4d;
+    display: block;
+    height: 4px;
+    margin: 0 auto 4px;
+    width: 30px;
+} */
 
 
 /*banner版面*/
@@ -229,6 +277,8 @@ p {
     margin: 0 auto;
     background-image: url(../image/Map.png);
     background-position-x: -21px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .map-position {
@@ -324,7 +374,9 @@ input[type="submit"] {
 }
 
 .btn-area {
-    margin: 0 auto;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 50px;
     float: right;
 }
 
@@ -367,7 +419,7 @@ input[type="submit"] {
 } */
 
 .footer {
-    /* background: #EFE9E7; */
+    background: #EFE9E7;
 }
 
 .footer>.container {
@@ -728,10 +780,13 @@ input[type="submit"] {
 }
 
 .loginform {
+    width: 300px;
+    margin: 0 auto;
     background: #EFE9E7;
     box-shadow: 3px 3px 4px 0px rgba(0, 0, 0, 0.16);
     text-align: center;
     border-top: 3px solid #FF5E45;
+    margin-bottom: 50px;
 }
 
 .loginform>.container {
@@ -762,6 +817,7 @@ input[type="submit"] {
     font-size: 18px;
     color: #3D1101;
     margin-bottom: 16px;
+    text-align: center;
 }
 
 .loginform>.container>.btn-area {
@@ -796,7 +852,8 @@ input[type="submit"] {
 }
 
 .user,
-.passwd {
+.passwd,
+.repeate-passwd {
     position: relative;
     /*   display:inline-block; */
 }
@@ -808,26 +865,96 @@ input[type="submit"] {
     font-size: 14px;
     position: absolute;
     left: 3%;
-    top: 74%;
+    top: 50%;
     transform: translateY(-50%);
 }
 
 .user input,
-.passwd input {
+.passwd input,
+.repeate-passwd input {
     text-indent: 30px;
     margin-bottom: 0;
     /* padding: 5px; */
 }
 
-.passwd:before {
+.passwd:before,
+.repeate-passwd:before {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     content: "\f023";
     font-size: 14px;
     position: absolute;
     left: 3%;
-    top: 74%;
+    top: 50%;
     transform: translateY(-50%);
+}
+
+.register {
+    font-family: NotoSansCJKtc-Black;
+    font-size: 18px;
+    color: #3D1101;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 16px;
+}
+
+.term {
+    min-width: 290px;
+    margin-bottom: 15px;
+    padding: 0 15px;
+}
+
+.term p {
+    width: 100%;
+    font-size: 18px;
+    color: #3D1101;
+}
+
+.registerform>.container {
+    min-width: 0;
+    padding: 0 5px;
+}
+
+.registerform>.container label {
+    height: auto;
+    margin-bottom: 0;
+}
+
+.repeate-passwd {
+    margin-top: 12px;
+    margin-bottom: 0;
+}
+
+.registerform>.container input:nth-child(3) {
+    margin-top: 12px;
+}
+
+.registerform>.container a {
+    font-size: 14px;
+    color: #FF5E45;
+    text-decoration: none;
+    margin-bottom: 30px;
+    display: block;
+    text-align: left;
+}
+
+.registerform>.container .btn-area {
+    margin-bottom: 15px;
+}
+
+.box {
+    background: #EFE9E7;
+    box-shadow: 3px 3px 4px 0px rgba(0, 0, 0, 0.16);
+    border-top: 3px solid #FF5E45;
+    margin-bottom: 50px;
+}
+
+#register-btn {
+    width: 125px;
+    float: right;
+    margin-bottom: 15px;
+    background: #F56C23;
+    border-radius: 3px;
 }
 
 
@@ -998,51 +1125,75 @@ input[type="submit"] {
     }
     .loginform {
         width: 50%;
-        margin: 0 auto;
+        margin-right: auto;
+        margin-left: auto;
     }
-    @media(min-width:400px) and (max-width:584px) {
-        .meal {
-            min-width: 350px;
-        }
-        .meal-img {
-            width: 100%;
-        }
-        .outer hr {
-            display: none;
-        }
-        /* .loginform>.container {
-            width: 80%;
-        } */
+    .registerform {
+        float: left;
+        width: 50%;
+    }
+    .registerform>.container {
+        min-width: 50%;
+    }
+    .term {
+        float: left;
+        text-align: left;
+        width: 50%;
+    }
+    .registerform>.container label {
+        text-align: left;
     }
 }
 
-@media(min-width:585px) and (max-width:766px) {
+@media(min-width:400px) and (max-width:584px) {
     .meal {
-        min-width: 400px;
+        min-width: 350px;
     }
     .meal-img {
-        min-width: 100%;
+        width: 100%;
     }
     .outer hr {
         display: none;
     }
+    /* .loginform>.container {
+            width: 80%;
+        } */
+}
+
+
+}
+@media(min-width:585px) and (max-width:766px) {
+    .meal {
+        min-width: 400px;
+    }
+    
+    .meal-img {
+        min-width: 100%;
+    }
+    
+    .outer hr {
+        display: none;
+    }
+    
     .loginform {
         width: 50%;
         margin: 0 auto;
     }
+    
     .loginform>.container {
         width: 50%;
     }
 }
-
 @media(min-width:1024px) {
     .header {
         z-index: 3;
     }
+    
     .container {
         min-width: 1024px;
         padding: 16px 48px 16px 42px;
     }
+    
     .banner>.container {
         min-width: 1024px;
         padding-top: 123px;
@@ -1050,44 +1201,54 @@ input[type="submit"] {
         padding-left: 282px;
         padding-right: 282px;
     }
+    
     .chief-feature {
         padding-left: 4%;
         background: #3D1101;
     }
+    
     .chief-feature-img {
         float: left;
         width: 48%;
     }
+    
     .name {
         float: left;
         width: 50%;
         height: 460px;
     }
+    
     .name>.container {
         min-width: 35%;
     }
+    
     .map {
         width: 50%;
         background-repeat: no-repeat;
         background-position: center;
         margin: 0 auto;
     }
+    
     .footer>.container {
         padding: 100px 10px 50px 43px;
     }
+    
     .name1 {
         /* float: left; */
         width: 47%;
     }
+    
     .meal-category {
         float: left;
         width: 25%;
     }
+    
     .searcharea {
         width: 73%;
         float: right;
         margin-top: 0;
     }
+    
     .meal {
         width: 31.333%;
         margin-top: 26px;
@@ -1097,26 +1258,39 @@ input[type="submit"] {
         /* margin-top: 20px;
                 margin-right: 12px; */
     }
+    
     .meal-list {
         min-height: 140px;
     }
+    
     .meal-title-en {
         font-size: 12px;
     }
+    
     .out-area {
         width: 70%;
         float: left;
     }
+    
     .buy-area {
         width: 30%;
         float: left;
         margin-top: 0;
     }
+    
     .loginform {
         width: 30%;
-        margin: 0 auto;
+        margin-right: auto;
+        margin-left: auto;
     }
+    
     .loginform>.container {
         width: 30%;
+    }
+    
+    .box {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
