--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,7 @@ p {
     width: 100%;
     height: 56px;
     background: rgba(0, 0, 0, 0.75);
-    /* position: fixed; */
-    position: relative;
+    position: fixed;
     z-index: 3;
 }
 
@@ -50,7 +49,41 @@ p {
 }
 
 #nav .menu {
-    display: none;
+    max-height: 0;
+    overflow: hidden;
+    /* transition: max-height 2.3s; */
+    margin-top: 1px;
+    position: absolute;
+    z-index: 5;
+    top: 54px;
+    left: 0;
+    right: 0;
+    background: rgb(49, 49, 49);
+    text-align: center;
+}
+
+#nav .menu li {
+    float: none;
+}
+
+#nav .menu a {
+    transition: all 0.3s;
+    color: white;
+}
+
+
+/* #nav li a:hover {
+    background: #69ca62;
+} */
+
+.showmenu {
+    display: block;
+    float: right;
+}
+
+.menu-show {
+    /* display: block; */
+    max-height: 500px !important;
 }
 
 
@@ -109,6 +142,7 @@ p {
     background-size: cover;
     background-image: url(../image/header_mobile.png);
     background-position: center bottom;
+    position: relative;
 }
 
 .banner>.container {
@@ -1092,7 +1126,7 @@ input[type="submit"] {
         width: 460px;
         /* margin: 0 auto; */
         left: 50%;
-        top: 723px;
+        top: 777px;
         margin-left: -230px;
         margin-top: -230px;
     }
@@ -1142,6 +1176,18 @@ input[type="submit"] {
     }
     .registerform>.container label {
         text-align: left;
+    }
+    .showmenu {
+        display: none;
+    }
+    #nav .menu {
+        float: right;
+        max-height: 24px;
+        position: static;
+        background: none;
+    }
+    #nav .menu li {
+        float: left;
     }
 }
 
