修正部分錯誤

--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ label {
 #logo a h1 {
     width: 120px;
     height: 24px;
-    background: url(/image/logo_w\(null\).svg);
+    background: url(/image/logo_w.svg);
     /* no-repeat; */
     display: block;
     text-indent: 101%;
@@ -86,7 +86,7 @@ label {
 }
 
 #nav {
-    float: right;
+    /* float: right; */
 }
 
 #nav .menu {
@@ -1234,40 +1234,33 @@ input[type="submit"] {
     }
 }
 
-
-}
 @media(min-width:585px) and (max-width:766px) {
     .meal {
         min-width: 400px;
     }
-    
     .meal-img {
         min-width: 100%;
     }
-    
     .outer hr {
         display: none;
     }
-    
     .loginform {
         width: 50%;
         margin: 0 auto;
     }
-    
     .loginform>.container {
         width: 50%;
     }
 }
+
 @media(min-width:1024px) {
     .header {
         z-index: 3;
     }
-    
     .container {
         min-width: 1024px;
         padding: 16px 48px 16px 42px;
     }
-    
     .banner>.container {
         min-width: 1024px;
         padding-top: 123px;
@@ -1275,54 +1268,44 @@ input[type="submit"] {
         padding-left: 282px;
         padding-right: 282px;
     }
-    
     .chief-feature {
         padding-left: 4%;
         background: #3D1101;
     }
-    
     .chief-feature-img {
         float: left;
         width: 48%;
     }
-    
     .name {
         float: left;
         width: 50%;
         height: 460px;
     }
-    
     .name>.container {
         min-width: 35%;
     }
-    
     .map {
         width: 50%;
         background-repeat: no-repeat;
         background-position: center;
         margin: 0 auto;
     }
-    
     .footer>.container {
         padding: 100px 10px 50px 43px;
     }
-    
     .sublogo {
         /* float: left; */
         width: 47%;
     }
-    
     .meal-category {
         float: left;
         width: 25%;
     }
-    
     .searcharea {
         width: 73%;
         float: right;
         margin-top: 0;
     }
-    
     .meal {
         width: 31.333%;
         margin-top: 26px;
@@ -1330,36 +1313,29 @@ input[type="submit"] {
         min-height: 230px;
         z-index: 2;
     }
-    
     .meal-list {
         min-height: 140px;
     }
-    
     .meal-title-en {
         font-size: 12px;
     }
-    
     .out-area {
         width: 70%;
         float: left;
     }
-    
     .buy-area {
         width: 30%;
         float: left;
         margin-top: 0;
     }
-    
     .loginform {
         width: 30%;
         margin-right: auto;
         margin-left: auto;
     }
-    
     .loginform>.container {
         width: 30%;
     }
-    
     .box {
         width: 80%;
         margin-left: auto;
